--- a/style.css
+++ b/style.css
@@ -1,26 +1,56 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
+body{
+    background-color: gray;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .container{
-    background-color: red;
+    display: flex;
+    flex-direction: column;
     width: 25%;
     padding: 5px;
     margin: auto;
+    background-color: #2E2E2E;
+    margin-top: 25px;
+    border-radius: 15px;
 }
 .tela{
-    background-color: rosybrown;
-    padding: 5px;
+    padding: 20px;
 }
-.txt_area{
-    width: 95%;
+#input{
+    width: 100%;
+    text-align: center;
+    font-size: 3em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    border: 5px solid black;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.btns{
+    margin-inline: auto;
 }
 .linha{
-    background-color: aqua;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
 }
-button{
+span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width:100px;
     height: 100px;
-    margin: 5px;
     cursor: pointer;
+    border: 3px solid black;
+    font-size: 26px;
+    background-color: gray;
+    color: antiquewhite;
+    border-radius: 10px;
+    margin: 2px;
+}
+span:hover{
+    transform: scale(1.1);
 }
