--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 .container{
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width:20%;
     padding: 5px;
     margin: auto;
     background-color: #2E2E2E;
@@ -21,15 +21,15 @@ body{
     padding: 20px;
 }
 #input{
-    width: 100%;
-    text-align: center;
+    width: 90%;
     font-size: 3em;
-    padding-top: 2em;
-    padding-bottom: 2em;
     border: 5px solid black;
     border-radius: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: antiquewhite;
+    text-align: right;
+    padding: 10px;
+    margin: auto;
+    height: 1em ;
 }
 .btns{
     margin-inline: auto;
