--- a/style.css
+++ b/style.css
@@ -7,16 +7,20 @@ body{
     background-color: rebeccapurple;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .container{
     display: flex;
     flex-direction: column;
     padding: 5px;
-    margin: 40px auto 0 auto;
     background-color: rgba(0, 0, 0, 0.684);
     border-radius: 15px;
-    max-width: 400px;
+    max-width: 300px;
+    height: 80vh;
+    width: 100%;
+    margin-inline: 10px;
 }
 #input{
     width: 100%;
@@ -29,26 +33,29 @@ body{
     padding-right: 2px;
     display: flex;
     justify-content: flex-end;
+    overflow: hidden; 
+    white-space: nowrap;
+    text-overflow: ellipsis;
+ 
 }
 .btns{
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 2px;
 }
 .linha{
     display: flex;
+    height: 100%;
 }
 span{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     cursor: pointer;
-    border: 3px solid black;
+    border: 1px solid black;
     font-size: 26px;
     background-color: rgb(39, 39, 39);
     color: antiquewhite;
-    margin: 2px;
     width: 100%;
-}
-span:hover{
-    transform: scale(1.1);
 }
