--- a/style.css
+++ b/style.css
@@ -59,3 +59,9 @@ span{
     color: antiquewhite;
     width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+    .container{
+        height: 50vh;
+    }
+}
